<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor4"
    android:orientation="horizontal"
    android:padding="10dp"
    android:layout_alignParentLeft="true">

    <EditText
        android:id="@+id/edit_todo_title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:hint="@string/sample_activity_todo_title"
        android:textColorHint="@color/TextWhite"
        android:textColor="@color/TextWhite"
        android:lines="1"
        android:maxLines="1"
        android:scrollbars="horizontal"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/edit_todo_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/edit_todo_title"
        android:inputType="text"
        android:hint="@string/sample_activity_todo_description"
        android:textColorHint="@color/TextWhite"
        android:textColor="@color/TextWhite"
        android:lines="10"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:layout_marginTop="5dp"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/edit_todo_startDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/TextWhite"
        android:textColor="@color/TextWhite"
        android:textSize="25dp"
        android:backgroundTint="@color/bgColor4"
        android:layout_below="@id/edit_todo_text"
        android:hint="@string/sample_activity_todo_startDate"/>

    <Button
        android:id="@+id/edit_todo_endDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/TextWhite"
        android:textColor="@color/TextWhite"
        android:textSize="25dp"
        android:backgroundTint="@color/bgColor4"
        android:layout_below="@id/edit_todo_startDate"
        android:hint="@string/sample_activity_todo_endDate"/>

    <ListView
        android:id="@+id/edit_todo_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgColor4"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/edit_todo_endDate"
        android:layout_above="@+id/edit_todo_progressText">
    </ListView>
    <TextView
        android:id="@+id/edit_todo_progressText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
